--- a/page 1.html
+++ b/page 1.html
@@ -6,7 +6,7 @@
     <title>Example website</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <a href="page 1.html">Click here</a>
+    <h1>Page 1</h1>
+    <a href="page2.html">Click here</a>
 </body>
 </html>
