Added list + SCC

--- a/page 1.html
+++ b/page 1.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example website</title>
+    <link rel="Stylesheet" href="Styles/Styles.css">
 </head>
 <body>
     <h1>Page 1</h1>
     <a href="page2.html">Click here</a>
+
+
+    <h2 class="red">Video Games</h2>
+
+    <!-- Ordered List (numbered) -->
+    <ol>
+       <!--List item for each row in the list-->
+        <li>F1 24</li>
+        <li>2K 24</li>
+        <li>Ea sports 24</li>
+    </ol>
+
+    <h2>Shopping List</h2>
+     <!--Unordered List (bulleted)-->
+    <UL>
+        <!--List item for each row in the list-->
+        <li>Bread</li>
+        <li>Milk</li>
+        <li>Ham</li>
+    </UL>
 </body>
 </html>
