--- a/page2.html
+++ b/page2.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example website</title>
+    <link rel="Stylesheet"
+    href="Styles/Styles.css"
 </head>
 <body>
     <h1>Page 2</h1>
     <a href="Index.html">Click here</a>
+    
+    <!-- Tabel element used for grid structures-->
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Surname</th>
+            <th>Occupation</th>
+            <th>Contract Type</th>
+        </tr>
+        <tr>
+            <td>Frans</td>
+            <td>BB</td>
+            <td>Salesperson</td>
+            <td>Full Timer</td>
+        </tr>
+        <tr>
+            <td>Hans</td>
+            <td>Pace</td>
+            <td>Salesperson</td>
+            <td>Full Timer</td>
+        </tr>
+        <tr>
+            <td>James</td>
+            <td>Said</td>
+            <td>Cleaner</td>
+            <td>Full Timer</td>
+        </tr>
+        <tr>
+            <td>Janet</td>
+            <td>Buhagar</td>
+            <td>Cleaner</td>
+            <td>Full Timer</td>
+        </tr>
+        <tr>
+            <td>Aidan</td>
+            <td>Borg</td>
+            <td>Manager</td>
+            <td>Part Timer</td>
+        </tr>
+    </table> 
 </body>
 </html>
