--- a/blog-website/index.html
+++ b/blog-website/index.html
@@ -50,15 +50,44 @@
                                         14 November 2023
                                     </time>
                                 </p>
+                            </header>
 
                                 <div class="image rounded-image">
                                     <img src="assets/images/HAMRUN-champions league.jpg" alt="Hamrun Spartans - champions league">
                                 </div>
 
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, totam? Quasi fugiat ad accusantium minus? Incidunt, libero distinctio. Accusamus similique non eveniet labore nam culpa ab cumque provident officiis eaque.
+                                </p>
+
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, rerum assumenda. Magni quibusdam totam, enim harum, iure iusto earum doloremque quis tenetur amet porro quas aspernatur excepturi vitae similique consectetur?
+                                </p>
+
+                                <h3 class="subtitle">
+                                    Hamrun Spartans Champions League?
+                                </h3>
+
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium expedita vel consectetur quaerat magnam rerum aut fuga id repudiandae, assumenda provident ratione ipsa distinctio, excepturi aperiam non qui veritatis neque!
+                                </p>
+
+                                <h3 class="subtitle">
+                                    Winners 2023
+                                </h3>
+
+                                <ol class="summary">
+                                    <li>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus a vitae tenetur cumque aut, temporibus perspiciatis consectetur dignissimos iure hic pariatur at molestias dolore delectus eligendi quod numquam laudantium quidem.
+                                    </li>
+                                    <li>
+                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita unde repudiandae vitae fugiat? Neque voluptate quis fuga sint ad quibusdam vero laboriosam dolores ducimus fugiat facilis, hic iste voluptas necessitatibus?
+                                    </li>
+                                    <li>
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae praesentium iusto, vero nemo dolorum possimus porro, adipisci nam doloribus, maxime magni? Facere ipsum voluptate, quo non ad corporis! Atque, hic?
+                                    </li>
+                                </ol>
                                 
-
-
-                            </header>
                         </article>
                     </section>
                 </div>
@@ -67,6 +96,11 @@
         </main>
     </div>
 
+    <footer>
+        <div class="container">
+        &copy 2023, Aidan J Borg
+        </div>
+    </footer>
 
 </body>
 </html>
