Added the blog page

--- a/blog-website/index.html
+++ b/blog-website/index.html
@@ -21,13 +21,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="blog-list.html" class="nav-link">
                         Blog
                     </a>
                 </li>
             </ul>
 
-            <a href="#" class="button">
+            <a href="contact.html" class="button">
                 Contact Us
             </a>
         </div>
