--- a/blog-website/blog-list.html
+++ b/blog-website/blog-list.html
@@ -16,7 +16,7 @@
             
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About Us</a>
+                    <a href="about.html" class="nav-link">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a href="blog-list.html" class="nav-link">Blog</a>
