--- a/blog-website/contact.html
+++ b/blog-website/contact.html
@@ -16,7 +16,7 @@
 
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="about.html" class="nav-link">
                         About Us
                     </a>
                 </li>
