--- a/blog-website/about.html
+++ b/blog-website/about.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="navbar-brand">
-                Games Net
+                Hamrun Spartans
             </a>
             
             <ul class="navbar-nav">
@@ -43,12 +43,11 @@
                     <h2>Joseph Portelli</h2>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-4">
                     <figure class="about-image rounded-image">
-                        <img src="assets/images/HAMRUN-champions league.jpg" alt="Me">
-                        <figcaption>Oh hi...</figcaption>
+                        <img src="assets/images/Joseph Portelli.jpg" alt="Me">
+                        <figcaption>"U sena ohra Champions League"</figcaption>
                     </figure>
                 </div>
                 <div class="col-8">
@@ -69,11 +68,11 @@
                     <br>
                     <h4>Fixtures</h4>
                     <ol>
-                        <li>H VS V</li>
-                        <li>H VS F</li>
-                        <li>H VS G</li>
-                        <li>H VS SL</li>
-                        <li>H VS S</li>
+                        <li>Hamrun VS Valletta</li>
+                        <li>Hamrun VS Floriana</li>
+                        <li>Hamrun VS Gudja</li>
+                        <li>Hamrun VS St Lucia</li>
+                        <li>Hamrun VS Sliema</li>
                     </ol>
                 </div>
             </div>
@@ -94,7 +93,7 @@
                 </div>
                 <div class="col-4">
                     <div class="image rounded-image">
-                        <img src="assets/images/HAMRUN-champions league.jpg" alt="Skyrim">
+                        <img src="assets/images/HAMRUN vs Bkara.jpg" alt="Skyrim">
                         <figcaption>Hamrun vs Bkara</figcaption>
                     </div>
                 </div>
