--- a/blog-website/blog-list.html
+++ b/blog-website/blog-list.html
@@ -36,7 +36,7 @@
                         <header>
                             <h2>How can they win the Champions league?</h2>
                             <div class="image rounded-image">
-                                <img src="assets/images/HAMRUN-champions league.jpg" alt="ESO article image">
+                                <img src="assets/images/HAMRUN champions 1.jpg" alt="ESO article image">
                             </div>
                         </header>
                         <p>
@@ -53,7 +53,7 @@
                         <header>
                             <h2>Winners 2023/24 Season</h2>
                             <div class="image rounded-image">
-                                <img src="assets/images/HAMRUN-champions league.jpg" alt="ESO article image">
+                                <img src="assets/images/Hamrun-champions 2.jpg" alt="ESO article image">
                             </div>
                         </header>
                         <p>
