--- a/blog-website/contact.html
+++ b/blog-website/contact.html
@@ -45,6 +45,7 @@
                     method="post"
                     enctype="plain text/plain">
                         <div class="container">
+                        </form>
                             <!--First and last name-->
                             <div class="row">
                                 <div class="col-6">
